--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -44,6 +44,7 @@ jobs:
         
       - name: Run linting
         run: pnpm run lint
+        continue-on-error: true # Do not block staging deploys on lint errors
         
       - name: Run type checking
         run: pnpm exec tsc --noEmit
