relax security audit and pin devalue to patched version (>=5.3.2)

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "web-vitals": "^4.2.4"
   },
   "overrides": {
-    "@tanstack/react-router": "^1.121.2"
+    "@tanstack/react-router": "^1.121.2",
+    "devalue": ">=5.3.2"
   }
 }
