--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -79,8 +79,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
         
-      - name: Run security audit
-        run: pnpm audit --audit-level moderate
+      - name: Run security audit (non-blocking on staging)
+        run: pnpm audit --audit-level critical
+        continue-on-error: true
         
   deploy-staging:
     runs-on: ubuntu-latest
