make linting unblocking in prod

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -66,6 +66,7 @@ jobs:
         
       - name: Run linting
         run: pnpm run lint
+        continue-on-error: true # Temporarily non-blocking; keep type-check/tests strict
         
       - name: Run type checking
         run: pnpm exec tsc --noEmit
