feat: implement global i18n system with user language preferences
- Add LanguageProvider and translation system (English/Arabic)
- Store user language preference in user metadata
- Translate forms (registration, event forms) based on user preference
- Translate UI elements (navigation, tables, buttons, messages)
- Add database migration for user metadata column
- Fix SSR compatibility for language context
- Add language toggle component with default preference saving

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev --port 3000",
+    "dev:with-migrations": "pnpm run db:migrate && pnpm run dev",
     "db:migrate": "npx dotenv -e .env -- npx kysely migrate latest",
     "start-only": "node .output/server/index.mjs",
     "start": "pnpm run db:migrate && pnpm run recovery:permissions && pnpm run start-only",
