feat: add bulk user creation script for Orphanage clinic staff
- Create script to import users from CSV file for Orphanage clinic
  - Reads user data from docs/orphanage/Email Orphans project staff(EMAIL).csv
  - Maps CSV role values to system roles (Technical_adviser -> technical_advisor, etc.)
  - Generates simple passwords using first name + job position pattern
  - Creates users with proper clinic assignments and permissions
  - Handles existing users gracefully (idempotent)

- Auto-create Orphanage clinic if it doesn't exist
  - Checks for clinic with names: "Orphanage", "Orphan", "Orphan Project", "Orphans"
  - Creates clinic if none found

- Generate simplified CSV output with passwords
  - Outputs users-with-passwords.csv with all user details
  - Creates users-simplified.csv with essential columns for staff distribution

- Handle role permissions for all user types
  - Properly assigns permissions for caseworkers, team leaders, technical advisors
  - Falls back to provider-level permissions for roles not in rolePermissions

Files changed:
- scripts/create-orphanage-users.ts: New script for bulk user creation
- docs/orphanage/users-with-passwords.csv: Generated output with all user details
- docs/orphanage/users-simplified.csv: Simplified CSV for staff distribution

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ PERMISSION_SYSTEM_IMPLEMENTATION.md*
 /blob-report/
 /playwright/.cache/
 /playwright/.auth/
+users-with-passwords.csv
+Email Orphans project staff(EMAIL).csv
+users-simplified.csv
